# Concierge-Collector

./: .gitignore  API_AUDIT_REPORT.md  API_COMMUNICATION_AUDIT.md  API_ENDPOINT_DECISION_TREE.md  API_INTEGRATION_COMPLETE.md  API_ISSUE_REPORT.md  API_STANDARDIZATION_SUMMARY.md  API_V3_INTEGRATION.md  AUTHORIZATION_SUCCESS.md  BACKEND_TRANSFORMATION_COMPLETE.md  CHANGELOG.md  CLEANUP_SUMMARY.md  CLIENT_INTEGRATION_GUIDE.md  COLLECTOR_CRITICAL_FIXES.md  COLLECTOR_V3_ENHANCEMENT_SUMMARY.md  DELETE_ISSUE_DIAGNOSTIC.md  DELETE_SYNC_FIX.md  DELETE_SYNC_FIX_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_STATUS_2025_11_21.md  DEPLOYMENT_SUMMARY.md  ENVIRONMENT_SETUP.md  FIX_AI_ORCHESTRATE_500_ERROR.md  GITHUB_UPDATE_SUMMARY.md  IMPLEMENTACAO_V3_E_API_V4_COMPLETA.md  INVESTIGACAO_API_V3.md  LM_STUDIO_SETUP.md  LOCAL_SETUP_CHECKLIST.md  LOCAL_VS_SERVER_DATA_ANALYSIS.md  LOGGING_REDUCTION_SUMMARY.md  MOBILE_TOOLBAR_FIX_SUMMARY.md  PYTHONANYWHERE_DEPLOYMENT.md  PYTHONANYWHERE_ISSUES_ANALYSIS.md  QUICK_DEPLOY_CHECKLIST.md  QUICK_FIX_CHECKLIST.md  README.md  README.old.md  SCRIPTS_README.md  SECURITY.md  SMART_CONFIG_GUIDE.md  (+69 more)
capture/: app.js  (+5 more)
concierge-api-v4/: .env.example  .gitignore  Dockerfile  MONGODB_ATLAS_SETUP.md  PYTHONANYWHERE_DEPLOYMENT.md  README.md  create_test_user.py  docker-compose.yml  pyproject.toml  start_api.sh  stop_api.sh
concierge-api-v4/app/: __init__.py  auth.py  database.py  main.py  models.py
concierge-api-v4/tests/: __init__.py  conftest.py  test_auth.py  test_curations.py  test_database.py  test_edge_cases.py  test_entities.py  test_security.py  test_sync.py
(+661 files in other folders)
